[metadata]
name = brainplotlib
version = 0.1.0
author = Ma Feilong
author_email = mafeilong@gmail.com
description = A lightweight package to plot brain surfaces with Python.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = brain, surface, fmri, plotting, visualization
url = https://github.com/feilong/brainplotlib
project_urls =
    Bug Tracker = https://github.com/feilong/brainplotlib/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

install_requires =
    numpy
    matplotlib

[options.package_data]
    brainplotlib =
        data/*.npy

[options.packages.find]
where = src
